[package]
name = "cc-toolchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.0"
thiserror = "1.0.0"
log = "0.4.0"
which = "4.2.0"
futures = "0.3.0"
async-process = "1.3.0"
rayon = "1.5.0"
dunce = "1.0.0"
serde_json = "1.0"
relative-path = "1.6.0"
async-trait = "^0.1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]


[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tempfile = "3.2.0"